{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 59,
  "lineage": "eb8aa29d-08c5-cc54-558c-ad5824e60586",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682841977258:security-group/sg-0d3f97e472519fb0a",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0d3f97e472519fb0a",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-0c3cc2466a7ac1609"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682841977258:vpc/vpc-0c3cc2466a7ac1609",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-08da12530520dc79f",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0cfb0ad62ea5347b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c3cc2466a7ac1609",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09e78ee63f2175aa3",
            "owner_id": "682841977258",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "my-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:682841977258:loadbalancer/my-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-elb-315291398.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-elb",
            "security_groups": [
              "sg-0381469334f45af4b"
            ],
            "source_security_group": "682841977258/default_elb_435c7803-9977-39a9-9315-f8182160698b",
            "source_security_group_id": "sg-0381469334f45af4b",
            "subnets": [
              "subnet-07c629bb7ff294b3c",
              "subnet-0dba9a5462a7a980a",
              "subnet-0f3e607492a21c9d7"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682841977258:security-group/sg-081b7627bfda88bdd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-081b7627bfda88bdd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "my-sg",
            "name_prefix": "",
            "owner_id": "682841977258",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c3cc2466a7ac1609"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}